--- a/angular.json
+++ b/angular.json
@@ -25,13 +25,11 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css",
-              "node_modules/materialize-css/dist/css/materialize.css"
+              "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/hammerjs/hammer.js",
-              "node_modules/materialize-css/dist/js/materialize.js"
+              "node_modules/hammerjs/hammer.js"
             ]
           },
           "configurations": {
@@ -96,13 +94,11 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css",
-              "node_modules/materialize-css/dist/css/materialize.css"
+              "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/hammerjs/hammer.js",
-              "node_modules/materialize-css/dist/js/materialize.js"
+              "node_modules/hammerjs/hammer.js"
             ]
           }
         },
