--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              { "input": "src/tema.scss"},
               "src/styles.css"
             ],
             "scripts": [
@@ -93,7 +93,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              { "input": "src/tema.scss"},
               "src/styles.css"
             ],
             "scripts": [
